--- a/Kakao.html
+++ b/Kakao.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <meta nane="viewport" content="width=device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="Kakao.css">
         <title>카카오톡 대화방</title>
     </head>
