textarea layout change
change into display flex

--- a/Kakao.html
+++ b/Kakao.html
@@ -302,11 +302,13 @@
                     <img src="images/phone.png" alt="" height="24px">
                 </div>
             </div>
-            <div class="input-text">
-                <textarea id="text-area"cols="45" rows="5"></textarea>
-            </div>
-            <div class="enter">
-                <p>전송</p>
+            <div class="input-wrap">
+                <div class="input-text">
+                    <textarea id="text-area"cols="45" rows="5"></textarea>
+                </div>
+                <div class="enter">
+                    <p>전송</p>
+                </div>
             </div>
         </div>
     </body>
